--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-elements": "^3.4.2",
+    "react-native-safe-area-context": "^4.4.1",
     "react-redux": "^8.0.4",
     "tailwind-react-native-classnames": "^1.5.1"
   },
