--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
@@ -17,7 +19,9 @@
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-elements": "^3.4.2",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-redux": "^8.0.4",
     "tailwind-react-native-classnames": "^1.5.1"
   },
