--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
-    "expo": "~46.0.9",
+    "expo": "^49.0.11",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "^0.69.9",
+    "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.2",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-redux": "^8.0.4",
     "tailwind-react-native-classnames": "^1.5.1"
